release/1.7.9/VERSION.md
# 1.7.9

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.9```   |
| Release Time   | ```2014-04-14T13:29:23+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```fbbaae784b1de315a8d08a82c6c345a583fb676b```   |
| size   | ```5268481```   |
| url       | ```https://launcher.mojang.com/v1/objects/fbbaae784b1de315a8d08a82c6c345a583fb676b/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```4cec86a928ec171fdc0c6b40de2de102f21601b5```   |
| size   | ```9604581```   |
| url       | ```https://launcher.mojang.com/v1/objects/4cec86a928ec171fdc0c6b40de2de102f21601b5/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |